Working on repo tests