@@ -1,10 +1,8 @@
 package com.laderrco.fortunelink.portfolio_management.infrastructure.persistence.repositories;
 
-import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Objects;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -12,203 +10,83 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Repository;
 
 import com.laderrco.fortunelink.portfolio_management.domain.models.entities.Transaction;
-import com.laderrco.fortunelink.portfolio_management.domain.models.enums.TransactionType;
+import com.laderrco.fortunelink.portfolio_management.domain.models.valueobjects.TransactionQuery;
 import com.laderrco.fortunelink.portfolio_management.domain.models.valueobjects.ids.AccountId;
 import com.laderrco.fortunelink.portfolio_management.domain.models.valueobjects.ids.PortfolioId;
 import com.laderrco.fortunelink.portfolio_management.domain.repositories.TransactionQueryRepository;
 import com.laderrco.fortunelink.portfolio_management.infrastructure.persistence.entities.TransactionEntity;
 import com.laderrco.fortunelink.portfolio_management.infrastructure.persistence.mappers.TransactionEntityMapper;
 
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
 
 @Repository
 @AllArgsConstructor
 public class TransactionQueryRepositoryImpl implements TransactionQueryRepository {
-    private final JpaTransactionRepository jpaRepository;
-    private final TransactionEntityMapper mapper;
+        private final JpaTransactionRepository jpaRepository;
+        private final TransactionEntityMapper mapper;
+        @PersistenceContext
+        private EntityManager em;
 
-    @Override
-    public List<Transaction> findByPortfolioId(PortfolioId portfolioId, Pageable pageable) {
-        List<TransactionEntity> entities = jpaRepository.findByPortfolioId(
-            portfolioId.portfolioId(), 
-            pageable
-        );
-        return entities.stream()
-            .map(mapper::toDomain)
-            .collect(Collectors.toList());
-    }
-    
-    @Override
-    public Page<Transaction> findByAccountId(AccountId accountId, Pageable pageable) {
-        Objects.requireNonNull(pageable);
-        Page<TransactionEntity> entityPage = jpaRepository.findByAccountId(
-            accountId.accountId(), 
-            pageable
-        );
-        List<Transaction> transactions = Objects.requireNonNull(entityPage.getContent().stream()
-            .map(mapper::toDomain)
-            .collect(Collectors.toList()));
-        
-        return new PageImpl<>(
-            transactions, 
-            pageable, 
-            entityPage.getTotalElements()
-        );
-    }
-    
-    @Override
-    public List<Transaction> findByPortfolioIdAndDateRange(
-            PortfolioId portfolioId, 
-            LocalDateTime start, 
-            LocalDateTime end, 
-            Pageable pageable) {
-        
-        Page<TransactionEntity> entityPage = jpaRepository.findByPortfolioIdWithFilters(
-            portfolioId.portfolioId(),
-            null, // no type filter
-            start,
-            end,
-            pageable
-        );
-        
-        return entityPage.getContent().stream()
-            .map(mapper::toDomain)
-            .collect(Collectors.toList());
-    }
-    
-    @Override
-    public long countByPortfolioId(PortfolioId portfolioId) {
-        return jpaRepository.countByPortfolioId(portfolioId.portfolioId());
-    }
-    
-    @Override
-    public long countByAccountId(AccountId accountId) {
-        return jpaRepository.countByAccountId(accountId.accountId());
-    }
-    
-    @Override
-    public Page<Transaction> findByPortfolioIdAndTransactionType(
-            PortfolioId portfolioId, 
-            TransactionType transactionType, 
-            Pageable pageable) {
-        Objects.requireNonNull(pageable);
+        @Override
+        @Transactional
+        public Page<Transaction> find(TransactionQuery query, Pageable pageable) {
+                Objects.requireNonNull(pageable);
 
-        Page<TransactionEntity> entityPage = jpaRepository.findByPortfolioIdWithFilters(
-            portfolioId.portfolioId(),
-            transactionType.name(),
-            null,
-            null,
-            pageable
-        );
-        
-        List<Transaction> transactions = Objects.requireNonNull(entityPage.getContent().stream()
-            .map(mapper::toDomain)
-            .collect(Collectors.toList()));
-        
-        return new PageImpl<>(
-            transactions, 
-            pageable, 
-            entityPage.getTotalElements()
-        );
-    }
-    
-    @Override
-    public Page<Transaction> findByFilters(
-            PortfolioId portfolioId,
-            TransactionType transactionType,
-            LocalDateTime startDate,
-            LocalDateTime endDate,
-            Set<String> assetSymbols,
-            Pageable pageable) {
-        Objects.requireNonNull(pageable);
-        
-        // For now, delegate to portfolio filters
-        // Asset symbol filtering would require additional query customization
-        Page<TransactionEntity> entityPage = jpaRepository.findByPortfolioIdWithFilters(
-            portfolioId.portfolioId(),
-            transactionType != null ? transactionType.name() : null,
-            startDate,
-            endDate,
-            pageable
-        );
-        
-        List<Transaction> transactions = Objects.requireNonNull(entityPage.getContent().stream()
-            .map(mapper::toDomain)
-            .filter(t -> assetSymbols == null || assetSymbols.isEmpty() || 
-                (t.getAssetIdentifier().getPrimaryId() != null && assetSymbols.contains(t.getAssetIdentifier().getPrimaryId())))
-            .collect(Collectors.toList()
-        ));
+                Page<TransactionEntity> entityPage = jpaRepository.findWithFilters(
+                                query.portfolioId(),
+                                query.accountId(),
+                                query.transactionType() != null ? query.transactionType() : null,
+                                query.startDate().toInstant(ZoneOffset.UTC),
+                                query.endDate().toInstant(ZoneOffset.UTC),
+                                pageable);
 
-        
-        return new PageImpl<>(
-            transactions, 
-            pageable, 
-            entityPage.getTotalElements()
-        );
-    }
-    
-    @Override
-    public Page<Transaction> findByPortfolioIdAndFilters(PortfolioId portfolioId, TransactionType transactionType, LocalDateTime startDate, LocalDateTime endDate, Pageable pageable) {
-        Objects.requireNonNull(pageable);
-        Page<TransactionEntity> entityPage = jpaRepository.findByPortfolioIdWithFilters(
-            portfolioId.portfolioId(),
-            transactionType != null ? transactionType.name() : null,
-            startDate,
-            endDate,
-            pageable
-        );
-        
-        List<Transaction> transactions = Objects.requireNonNull(entityPage.getContent().stream()
-            .map(mapper::toDomain)
-            .collect(Collectors.toList()));
-        
-        return new PageImpl<>(
-            transactions, 
-            pageable, 
-            entityPage.getTotalElements()
-        );
-    }
-    
-    @Override
-    public Page<Transaction> findByAccountIdAndFilters(
-            AccountId accountId,
-            TransactionType transactionType,
-            LocalDateTime startDate,
-            LocalDateTime endDate,
-            Pageable pageable) {
-        Objects.requireNonNull(pageable); 
-        Page<TransactionEntity> entityPage = jpaRepository.findByAccountIdWithFilters(
-            accountId.accountId(),
-            transactionType != null ? transactionType.name() : null,
-            startDate,
-            endDate,
-            pageable
-        );
-        
-        List<Transaction> transactions = Objects.requireNonNull(entityPage.getContent().stream()
-            .map(mapper::toDomain)
-            .collect(Collectors.toList()));
-        
-        return new PageImpl<>(
-            transactions, 
-            pageable, 
-            entityPage.getTotalElements()
-        );
-    }
+                Page<Transaction> mappedPage = mapPage(entityPage, pageable);
 
-    @Override
-    public List<Transaction> findByAccountIdAndDateRange(AccountId accountId, LocalDateTime start, LocalDateTime end, Pageable pageable) {
-        Page<TransactionEntity> entityPage = jpaRepository.findByAccountIdWithFilters(
-            accountId.accountId(),
-            null, // no type filter
-            start,
-            end,
-            pageable
-        );
-        
-        return entityPage.getContent().stream()
-            .map(mapper::toDomain)
-            .collect(Collectors.toList());
-    }
-    
+                // In-memory filtering ONLY when unavoidable
+                if (query.assetSymbols() == null || query.assetSymbols().isEmpty()) {
+                        return mappedPage;
+                }
+
+                List<Transaction> filtered = mappedPage.getContent().stream()
+                                .filter(t -> t.getAssetIdentifier().getPrimaryId() != null &&
+                                                query.assetSymbols().contains(
+                                                                t.getAssetIdentifier().getPrimaryId()))
+                                .toList();
+
+                return new PageImpl<>(
+                                filtered,
+                                pageable,
+                                filtered.size() // important: do NOT lie about totals
+                );
+        }
+
+        @Override
+        @Transactional
+        public long countByPortfolioId(PortfolioId portfolioId) {
+                return jpaRepository.countByPortfolioId(portfolioId.portfolioId());
+        }
+
+        @Override
+        @Transactional
+        public long countByAccountId(AccountId accountId) {
+                return jpaRepository.countByAccountId(accountId.accountId());
+        }
+
+        private Page<Transaction> mapPage(
+                        Page<TransactionEntity> entityPage,
+                        Pageable pageable) {
+
+                List<Transaction> transactions = entityPage.getContent().stream()
+                                .map(mapper::toDomain)
+                                .toList();
+
+                return new PageImpl<>(
+                                transactions,
+                                pageable,
+                                entityPage.getTotalElements());
+        }
+
 }
